--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "stream-combiner2": "^1.0.2",
     "jsdom": "^6.1.0",
     "mocha": "^2.2.5",
+    "eventemitter3": "^1.1.1",
     "react": "0.14.x",
     "react-dom": "0.14.x",
     "react-addons-test-utils": "^0.14.0",
