--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "npmpub": "NODE_ENV=production gulp pub --raw"
   },
   "style": "assets/index.css",
+  "dependencies": {
+    "eventemitter3": "^1.1.1"
+  },
   "devDependencies": {
     "rt-core": "^0.3.0",
     "babel": "^5.8.23",
@@ -36,7 +39,6 @@
     "stream-combiner2": "^1.0.2",
     "jsdom": "^6.1.0",
     "mocha": "^2.2.5",
-    "eventemitter3": "^1.1.1",
     "react": "0.14.x",
     "react-dom": "0.14.x",
     "react-addons-test-utils": "^0.14.0",
